HUGE change to failure gate logic, KELLY PROOF

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 
-#linkResults, #instructions{
-	border: 6px #ff6600 solid;
+#linkResults, #origLink, #help{
+	border: 3px #ff6600 solid;
 	background: rgba(255,255,255,1);
 	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
@@ -12,5 +12,24 @@
 	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
 	padding: 2em;
-
+	border-radius: 10px 10px 10px 10px;
+	-moz-border-radius: 10px 10px 10px 10px;
+	-webkit-border-radius: 10px 10px 10px 10px;
+}
+#productLinks {
+	background: rgba(255,216,168,1);
+	background: -moz-linear-gradient(top, rgba(255,216,168,1) 0%, rgba(255,145,71,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,216,168,1)), color-stop(100%, rgba(255,145,71,1)));
+	background: -webkit-linear-gradient(top, rgba(255,216,168,1) 0%, rgba(255,145,71,1) 100%);
+	background: -o-linear-gradient(top, rgba(255,216,168,1) 0%, rgba(255,145,71,1) 100%);
+	background: -ms-linear-gradient(top, rgba(255,216,168,1) 0%, rgba(255,145,71,1) 100%);
+	background: linear-gradient(to bottom, rgba(255,216,168,1) 0%, rgba(255,145,71,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd8a8', endColorstr='#ff9147', GradientType=0 );
+	
+	padding: 2em;
+	border-radius: 10px 10px 10px 10px;
+	-moz-border-radius: 10px 10px 10px 10px;
+	-webkit-border-radius: 10px 10px 10px 10px;
+	border: 3px #ff6600 solid;
+	
 }
